--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,13 +2,13 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
   <label for="username">Username:</label><br>
-  <input type="text" id="username" name="username"><br>
+  <input type="text" id="username" name="user[username]"><br>
 
   <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email"><br>
+  <input type="email" id="email" name="user[email]"><br>
 
   <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password"><br>
+  <input type="password" id="password" name="user[password]"><br>
 
   <input type="submit" value="Submit">
 
