--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,28 @@
-<form action="/users" method="post" accept-charset="UTF-8">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+<%# <form action="/users" method="post" accept-charset="UTF-8"> %>
+  <%# <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token"> %>
 
-  <label for="username">Username:</label><br>
-  <input type="text" id="username" name="user[username]"><br>
+  <%# <label for="username">Username:</label><br> %>
+  <%# <input type="text" id="username" name="user[username]"><br> %>
 
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="user[email]"><br>
+  <%# <label for="email">Email:</label><br> %>
+  <%# <input type="email" id="email" name="user[email]"><br> %>
 
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="user[password]"><br>
+  <%# <label for="password">Password:</label><br> %>
+  <%# <input type="password" id="password" name="user[password]"><br> %>
 
-  <input type="submit" value="Submit">
+  <%# <input type="submit" value="Submit"> %>
 
-</form>
+<%# </form> %>
+
+<%= form_tag('/users',method:"post") do%>
+<%= label_tag(:username, "Username:") %><br>
+    <%= text_field_tag(:username) %><br>
+
+    <%= label_tag(:email, "Email:") %><br>
+    <%= email_field_tag(:email) %><br>
+
+    <%= label_tag(:password, "Password:") %><br>
+    <%= password_field_tag(:password) %><br>
+
+    <%= submit_tag("Submit") %>
+<%end%>
