--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,15 +14,29 @@
 
 <%# </form> %>
 
-<%= form_tag('/users',method:"post") do%>
-<%= label_tag(:username, "Username:") %><br>
-    <%= text_field_tag(:username) %><br>
+<%# <%= #form_tag('/users',method:"post") do %> %>
+<%# <%= #label_tag(:username, "Username:")<br> %> %>
+    <%# <%= #text_field_tag(:username)<br> %> %>
 
-    <%= label_tag(:email, "Email:") %><br>
-    <%= email_field_tag(:email) %><br>
+    <%# <%= #label_tag(:email, "Email:")<br> %> %>
+    <%# <%= #email_field_tag(:email)<br> %> %>
 
-    <%= label_tag(:password, "Password:") %><br>
-    <%= password_field_tag(:password) %><br>
+    <%# <%= #label_tag(:password, "Password:")<br> %> %>
+    <%# <%= #password_field_tag(:password)<br> %> %>
 
-    <%= submit_tag("Submit") %>
-<%end%>
+    <%# <%= #submit_tag("Submit") %> %>
+<%#end %>
+
+
+<%= form_for @user do |f| %>
+    <%=f.label :username, "Username"%><br>
+    <%= f.text_field :username %><br>
+    <%=f.label :email ,"Email:"%><br>
+    <%= f.email_field :email %><br>
+
+    <%=f.label :password, "Password:"%><br>
+    <%=f.password_field :password %><br>
+    
+    
+    <%= f.submit "Submit" %>
+    <% end %>
